# eventky-app-specs

./: Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
src/: constants.rs  lib.rs  utils.rs  validation.rs  wasm.rs
src/models/: attendee.rs  calendar.rs  event.rs  location.rs  mod.rs
